--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "tools-lib-js",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "My common tools",
   "main": "dist/tools.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel  --port 9000 example/index.html",
     "build": "node build.js",
-    "publish":"npm run build && npm publish --access public",
-    "doc":"docsify serve docs"
+    "publish": "npm run build && npm publish --access public",
+    "doc": "docsify serve docs"
   },
-
   "files": [
     "src",
     "dist/*.js",
@@ -37,11 +36,15 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "chalk": "^2.4.1",
+    "immutable": "^4.0.0-rc.12",
     "parcel-bundler": "^1.10.3",
     "rmrf": "^2.0.0",
     "rollup": "^0.67.3",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-uglify": "^6.0.0"
+  },
+  "dependencies": {
+    "immutable": "^4.0.0-rc.12"
   }
 }
