--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tools-lib-js",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "My common tools",
   "main": "dist/tools.js",
   "scripts": {
@@ -12,7 +12,8 @@
   },
   "files": [
     "src",
-    "dist/*.js"
+    "dist/*.js",
+    "example/**"
   ],
   "author": "zhoucheng",
   "license": "ISC",
