--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My common tools",
   "main": "dist/tools.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "parcel  --port 9000 example/index.html",
     "build": "node build.js",
     "publish": "npm run build && npm publish --access public",
@@ -33,10 +33,18 @@
   "devDependencies": {
     "ansi-styles": "^3.2.1",
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-runtime": "^6.26.0",
     "chalk": "^2.4.1",
+    "install": "^0.12.2",
+    "jest-diff": "^23.6.0",
+    "npm": "^6.5.0",
     "parcel-bundler": "^1.10.3",
+    "regenerator-runtime": "^0.13.1",
     "rmrf": "^2.0.0",
     "rollup": "^0.67.3",
     "rollup-plugin-babel": "^3.0.7",
