--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-runtime": "^6.26.0",
     "chalk": "^2.4.1",
     "install": "^0.12.2",
+    "jest": "^23.6.0",
     "jest-diff": "^23.6.0",
     "npm": "^6.5.0",
     "parcel-bundler": "^1.10.3",
