--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tools-lib-js",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "My common tools",
   "main": "dist/tools.js",
   "scripts": {
@@ -33,11 +33,14 @@
   "devDependencies": {
     "ansi-styles": "^3.2.1",
     "babel-core": "^6.26.3",
+    "babel-helpers": "^6.24.1",
     "babel-jest": "^23.6.0",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "babel-runtime": "^6.26.0",
     "chalk": "^2.4.1",
     "install": "^0.12.2",
