--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "publish": "npm run build && npm publish --access public",
     "doc": "docsify serve docs"
   },
-  "pre-push": ["test"],
+  "pre-commit": [
+    "test"
+  ],
   "files": [
     "src",
     "dist/*.js",
@@ -49,7 +51,7 @@
     "jest-diff": "^23.6.0",
     "npm": "^6.5.0",
     "parcel-bundler": "^1.10.3",
-    "pre-push": "^0.1.1",
+    "pre-commit": "^1.2.2",
     "regenerator-runtime": "^0.13.1",
     "rmrf": "^2.0.0",
     "rollup": "^0.67.3",
